--- a/clAIrity/app/src/main/res/layout/activity_main.xml
+++ b/clAIrity/app/src/main/res/layout/activity_main.xml
@@ -53,8 +53,8 @@
 
     <EditText
         android:id="@+id/Date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="331dp"
+        android:layout_height="70dp"
         android:backgroundTint="#E4DBDB"
         android:ems="10"
         android:fontFamily="@font/amiri_bold"
@@ -65,8 +65,9 @@
         android:textColorHint="#F1EAEA"
         app:layout_constraintBottom_toTopOf="@+id/dream"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.692" />
+        app:layout_constraintVertical_bias="0.714" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
