--- a/clAIrity/app/src/main/res/values/preloaded_fonts.xml
+++ b/clAIrity/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,6 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amiri_bold</item>
+        <item>@font/b612_bold_italic</item>
     </array>
 </resources>
