added third and fourth activities

--- a/clAIrity/app/src/main/res/layout/activity_main.xml
+++ b/clAIrity/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.699" />
 
+    <Button
+        android:id="@+id/Memory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Memory"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dream" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
