--- a/clAIrity/app/src/main/res/layout/activity_fourth.xml
+++ b/clAIrity/app/src/main/res/layout/activity_fourth.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/photo2"
-    tools:context=".SecondActivity" >
-
+    tools:context=".FourthActivity">
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView6"
         android:layout_width="326dp"
         android:layout_height="146dp"
         android:fontFamily="@font/amiri"
@@ -26,7 +25,7 @@
         app:layout_constraintVertical_bias="0.264" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/Date4"
         android:layout_width="143dp"
         android:layout_height="63dp"
         android:layout_marginTop="16dp"
@@ -37,7 +36,7 @@
         android:textColor="#0C0000"
         android:textColorHighlight="#0C0000"
         android:textColorHint="#0C0000"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.899"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +44,7 @@
         app:layout_constraintVertical_bias="0.253" />
 
     <Button
-        android:id="@+id/Return"
+        android:id="@+id/Back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Return"
@@ -53,20 +52,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.864"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.403" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="198dp"
-        android:layout_height="341dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.629"
-        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
